--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -7,7 +7,7 @@ $secondary: #f9f6fb;
 
 .login {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
   background: rgb(47, 72, 88);
