--- a/src/components/Navbar/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar/Navbar.scss
@@ -2,10 +2,28 @@
   background: whitesmoke;
   display: flex;
   justify-content: space-between;
+  @media (max-width: 680px) {
+    display: none;
+  }
   &__button {
-    width: 600px;
+    width: 400px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
+  }
+  &__icons {
+    width: 250px !important;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__logo {
+    width: 45px;
+    height: 45px;
+    & > img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
@@ -15,5 +33,34 @@
   &:hover {
     background: #00311d !important ;
     color: white !important ;
+  }
+}
+
+.nav2 {
+  display: none;
+  @media (max-width: 680px) {
+    background: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    display: flex;
+    &__button {
+      width: 400px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+    }
+    &__icons {
+      width: 150px !important;
+      display: flex;
+    }
+
+    &__logo {
+      width: 35px;
+      height: 35px;
+      & > img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
